# ts-backend-check

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ts-backend-check.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  complexipy-snapshot.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci_license_header_check.yaml  ci_pytest.yaml  ci_spdx_license_header_check.yaml  ci_static_analysis.yaml  pr_ci.yaml  pr_maintainer_checklist.yaml  python_package_ci.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: CHANGELOG.rst  CONTRIBUTING.rst
docs/source/ts_backend_check/: checker.rst  index.rst  utils.rst
docs/source/ts_backend_check/cli/: generate_config_file.rst  generate_test_projects.rst  index.rst  main.rst  upgrade.rst  version.rst
docs/source/ts_backend_check/parsers/: django_parser.rst  index.rst  typescript_parser.rst
docs/source/ts_backend_check/test_project/: index.rst
docs/source/tsbe_check/: index.rst
src/ts_backend_check/: __init__.py  checker.py  utils.py
src/ts_backend_check/cli/: __init__.py  check_blank.py  config.py  generate_config_file.py  generate_test_project.py  main.py  upgrade.py  version.py
src/ts_backend_check/new-folder/: main.py  main.ts
src/ts_backend_check/parsers/: backend_parser.py  context_parser.py  django_parser.py  fastapi_parser.py  typescript_parser.py
src/ts_backend_check/test_project/backend/: django_models.py  fastapi_models.py  invalid_models.py  models.py  valid_models.py
src/ts_backend_check/test_project/backend/invalid_model/: models.py
src/ts_backend_check/test_project/frontend/: invalid_interfaces.ts  valid_interfaces.ts  valid_interfaces_1.ts  valid_interfaces_2.ts
src/ts_backend_check/test_project/frontend/types/: valid_interfaces.ts
src/tsbe_check/: __init__.py  checker.py  django_parser.py  typescript_parser.py  utils.py
src/tsbe_check/cli/: __init__.py  main.py
tests/: conftest.py  test_checker.py  test_cli.py  test_django_parser.py  test_typescript_parser.py  test_utils.py
tests/cli/: test_check_blank.py  test_config.py  test_generate_config_file.py  test_generate_test_project.py  test_main.py  test_upgrade.py  test_version.py
tests/parsers/: helpers.py  test_backend_parser.py  test_django_parser.py  test_fastapi_parser.py  test_typescript_parser.py
