[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-backend-check"
version = "1.3.0"
description = "Check TypeScript interfaces against backend models"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["backend", "typescript", "validation", "ci", "cli"]
authors = [
    { name = "ts-backend-check developers", email = "engineering@activist.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "packaging>=26.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "prek>=0.3.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "setuptools>=80.10.1",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
]
docs = [
    # Keep docs dependencies formatted in this way with ruff to allow for upgrades via VS Code extension.
    "m2r2>=0.3.0",
    "numpydoc>=1.10.0",
    "sphinx-rtd-theme>=3.1.0",
]

[project.scripts]
ts-backend-check = "ts_backend_check.cli.main:main"

[project.urls]
Homepage = "https://github.com/activist-org/ts-backend-check"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "*/tests.py",
    "*/migrations/*.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
]

fixable = ["I"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds the following value.
max-complexity = 10

[tool.isort]
line_length = 88

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]

[tool.mypy]
mypy_path = "src"
strict = true
exclude = ["^tests/.*\\.py$", "docs"]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "ES01",
    "EX01",
    "SA01",
]

exclude = [
    "^.*\\.Meta$",     # Meta classes
    "^.*\\.__str__$",  # __str__ methods
    "^__init__$",      # __init__ files
    "^.*\\.__init__$", # __init__ methods
]
