[metadata]
name = tsbe-check
description = Check TypeScript types against backend models
description_file = README.md
keywords = backend, typescript, validation, ci, cli

classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: GNU License
Operating System :: OS Independent

[options.data_files]
. = requirements.txt
